--- a/css/blank_minimal.css
+++ b/css/blank_minimal.css
@@ -10,16 +10,25 @@ html {
 
 *, *::before, *::after {
     box-sizing: inherit;
-    border-width: inherit;
+    margin: 0;
+    padding: 0;
+    border-width: 0;
+    border-radius: 0;
     border-style: inherit;
+    outline: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    vertical-align: baseline;
     color: currentColor;
+    background-color: transparent;
+    background-repeat: no-repeat;
 }
 
 body {
     min-height: 100%;
+    font-size: 100%;
+    margin: 0;
 }
 
 img, video, audio, iframe {
