--- a/css/blank.css
+++ b/css/blank.css
@@ -80,6 +80,7 @@ body {
     color: var(--color-text);
     background-color: var(--bg-color);
     text-size-adjust: none;
+    -webkit-text-size-adjust: none;
     /* › don't let for example mobile Safari adjust font sizes */
 }
 
